@@ -20,10 +20,12 @@ Changes Since 0.16
 
 * General
 
-  - Explicit include test subdirectory contents in MANIFEST.in to avoid
-    inclusion of test outputs.
   - Fix [ 385 ]: Import of language modules.
   - Use importlib.import_module() to programmatically import modules.
+
+* docutils/MANIFEST.in
+
+  - Exclude test outputs.
 
 * docutils/__init__.py
 
